# sea-orm-axum

./: .env.orig  Cargo.toml  README.md  saba.yml  sqlite.db
migration/src/: lib.rs  m20240226_084616_characters.rs
src/: main.rs
src/domain/model/: character.rs  mod.rs  prelude.rs
src/domain/repository/: character.rs
src/infrastructure/repository/: character.rs
src/presentation/: app.rs
src/presentation/http/handler/: character.rs
src/usecase/: character.rs
