[package]
name = "sample4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
migration = { version = "0.1.0", path = "migration" }
sea-orm = "0.12.14"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
